src/objects/IRIS_Assessment_Questions__c.object
<CustomObject>
    <description>Stores the relation between an assessment and a question</description>
    <fields>
        <fullName>Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to assessment.</description>
        <label>Assessment</label>
        <referenceTo>IRIS_Assessment__c</referenceTo>
        <relationshipLabel>Assessment Questions</relationshipLabel>
        <relationshipName>Assessment_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>Represents the number associated with the question</description>
        <formula>Question__r.Question_Number__c</formula>
        <label>Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Represent the actual question</description>
        <label>Question</label>
        <referenceTo>IRIS_Question__c</referenceTo>
        <relationshipLabel>Assessment Questions</relationshipLabel>
        <relationshipName>Assessment_Questions_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_text__c</fullName>
        <description>The actual question</description>
        <formula>Question__r.Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question(text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Stores the sequence of the question on an assessment.</description>
        <label>Sequence</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Stores the total score for a question.</description>
        <label>Total Score</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Question__c</columns>
        <columns>NAME</columns>
        <columns>Assessment__c</columns>
        <columns>Question_text__c</columns>
        <columns>Sequence__c</columns>
        <columns>Question_Number__c</columns>
        <columns>Total_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AQ-{0000}</displayFormat>
        <label>Assessment Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Questions</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>